# ml-explorations

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
src/: cache.py  config.py  metrics.py  settings.py  train.py
src/datasets/: augmentation.py  base.py  bicycle.py  data_processing.py  retrieval.py  utils.py
src/datasets/extractors/: web.py
src/datasets/image/: base.py  bicycle.py
src/datasets/text/: base.py  emotion.py  hpmor.py
src/datasets/utils/: config.py  data.py  visualization.py
src/experiments/: ensemble_experiment.py  flux.py  replicate.py
src/experiments/RL/DQN/: dqn.py
src/experiments/RL/Sarsa_Q-Learning_Actor-Critic/: Sarsa_Q-Learning_Actor-Critic.ipynb
src/experiments/RL/bandit_algorithms/: bandit_algorithms.ipynb
src/experiments/RL/muzero/: muzero.ipynb
src/experiments/RL/offline_RL/: offline_RL.ipynb
src/experiments/bike_classification/: eval.py
src/experiments/comp551/mp1/: README.md  experiment.py
src/experiments/comp551/mp2/: README.md  config.yaml  experiment.py
src/experiments/comp551/mp3/: README.md  config.yaml  experiment.py
src/experiments/elk/: README.md
src/experiments/finetuning/: README.md  hpmor.py
src/experiments/finetuning/hpmor/: README.md  dataset_extraction.py  extract.py  hpmor.py  main.py  test.py
src/experiments/mechinterp/: README.md
src/experiments/shapley/: tests.ipynb
src/experiments/unlearning/: README.md
src/inputs/: base.py
src/models/: aria.py  base.py  ensemble.py  legacy_models.py  qwen.py
src/models/audio/: whisper.py
src/models/image/: base.py  efficientnet.py  mobilenetv2.py  vit.py
src/models/language/: qwen.py
src/models/legacy/: CNN.py  MLP.py  MLP_and_CNN.py  bert.py  linear_regression.py  logistic_regression.py  model.py  naive_bayes.py
src/models/legacy/utils/: __init__.py  initializers.py  optimizers.py
src/models/multimodal/: aria.py
src/models/utils/: activations.py  initializers.py  losses.py  optimizers.py  regularizers.py  schedulers.py
src/outputs/: base.py
src/pipelines/: base.py
src/utils/: cache.py  config.py  data_processing.py  ell_help.py  generic.py  metrics.py  model_utils.py  optimization.py  qwen.py  visualization.py
