[project]
name = "ml-explorations"
version = "0.1.0"
description = "Explorations with Machine Learning"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.1.0",
    "albumentations>=1.4.21",
    "anthropic>=0.34.2",
    "bertviz>=1.4.0",
    "bitsandbytes==0.42.0",
    "bs4>=0.0.2",
    "datasets>=3.1.0",
    "ell-ai[all]>=0.0.14",
    "gymnasium[box2d]>=1.0.0",
    "huggingface-hub>=0.26.2",
    "imageio>=2.36.0",
    "importlib-metadata>=8.5.0",
    "ipykernel>=6.29.5",
    "markdownify>=0.13.1",
    "matplotlib>=3.9.2",
    "mlx-lm>=0.19.2",
    "moviepy>=1.0.3",
    "numpy>=2.1.3",
    "openai>=1.53.0",
    "opencv-python>=4.10.0.84",
    "pandas>=2.2.3",
    "pathlib>=1.0.1",
    "pillow>=10.4.0",
    "pytest>=8.3.3",
    "python-dotenv",
    "regex>=2024.9.11",
    "replicate>=1.0.3",
    "requests>=2.32.3",
    "sacremoses>=0.1.1",
    "scikit-learn>=1.5.2",
    "seaborn>=0.13.2",
    "sentencepiece>=0.2.0",
    "swig>=4.2.1.post0",
    "tabulate>=0.9.0",
    "tensorboard>=2.18.0",
    "torch>=2.5.1",
    "torchaudio>=2.5.1",
    "torchvision>=0.20.1",
    "tqdm>=4.66.6",
    "transformers>=4.46.1",
    "vit-pytorch>=1.8.7",
]

# [tool.uv.sources]
# stable-baselines3 = { git = "https://github.com/DLR-RM/stable-baselines3" }
